src/test/deca/context/invalid/intermediaire2/arithmetiques/05unaryError.deca
// Description:
//    Erreur quand moins unaire est utilisé sur un type non entier/float
//
// Resultats:
//    05unaryError.lis
//
// Historique:
//    cree le 09/06/2022


{
    int x = -true;
}
